2013-06-15  Ramon Casero  <rcasero@gmail.com>

	* matlab/ThirdPartyToolbox/SpharmToolbox:

	- Move matlab functions from
	matlab/ThirdPartyToolbox/SpharmToolbox/code to
	matlab/ThirdPartyToolbox/SpharmToolbox, so that they can be found
	by update_README.sh.

	* Add matlab/ThirdPartyToolbox/SpharmToolbox:

	- From the Li Shen Laboratory, Indiana University. Downloaded from
	http://www.nitrc.org/projects/spharm-mat/

2013-06-14  Ramon Casero  <rcasero@gmail.com>

	* matlab/update_README.sh: (0.1.3)

	- The iso2mesh Toolbox has a different convention for the help
	headers. It's easier to add a special case to this script than
	modifiying all the help headers in iso2mesh.

	* Add matlab/ThirdPartyToolbox/iso2meshToolbox:

	- Version 2013 beta. By Qianqian Fang and David Boas. Website
	http://iso2mesh.sourceforge.net/cgi-bin/index.cgi?Home.

	- Downloaded from
	http://sourceforge.net/projects/iso2mesh/?source=dlp

	* Add test_scimat_dmatrix_imgeodesic.m: (0.1.0)

	- With "Toy example, ellipsoidal shape in 2D", "3D example, rat
	left ventricle"

	* Add matlab/add_gerardus_paths.m: (0.1.1)

	- Fix bug. Argument checking in a script produces error.

	* Add matlab/add_gerardus_paths.m: (0.1.0)

	- Add all Gerardus toolboxes to the Matlab path.

	* Rename matlab/ThirdPartyToolbox/nifti as
	matlab/ThirdPartyToolbox/niftiToolbox:

	- So that it follows the same convention as the others.

	* matlab/ItkToolbox/CMakeLists.txt: (0.6.2)

	- Fix bug. No need to link itk_imfilter to CGAL. This also creates
	a link to Boost libraries both the ones in Matlab and the ones
	provided by Gerardus, which throws a runtime error.

2013-06-12  Ramon Casero  <rcasero@gmail.com>

	* release 0.9.0:

	- Gerardus now builds on Linux and Windows, 64 bit.

	* CMakeLists.txt: (0.3.4)

	- Fix bug, broken linux compilation. We use Boost static libraries
	for the Windows build, but for the linux build we need Boost
	shared objects.

	* CMakeLists.txt: (0.3.3)
	* cpp/src/CMakeLists.txt: (0.3.2)